{
    "name": "InputAction",
    "maps": [
        {
            "name": "Gameplay",
            "id": "5940617f-5e8a-4617-ae2f-a224ce981c1e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f299b26d-e077-4b89-b907-e661766abe40",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "43beab44-0ad6-4685-bcad-4f12ed0762c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "b84bcfea-6196-4ba0-9997-ea8d08ae386a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "39ba9251-8b40-4325-88ad-eec659380846",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "289c2f34-7fe3-4777-9f61-0731e75cbd65",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "de6751c9-abd1-4a3d-ac76-9e9641557090",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f715f427-8cc7-47f5-9b85-4d5cf5fd33a4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f3202376-9bd8-4d6a-96f8-3d100c0bb3d9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "786fa2c7-d3f4-4eb2-850b-2d7164417e97",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "593e0c99-e609-4e97-8cac-02bd71ae5e71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09c1e155-3b09-47c4-bd12-5f6776c8878c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TextInput",
            "id": "059f4a24-6092-477b-a1f5-c206aeb3d81e",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "2ae22a94-80d6-4c7d-938d-4c888614d790",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7a94ff35-8a5d-406a-9fce-df0d2728c133",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}